# HeadReplacement

./: CMakeLists.txt  README
HeadReplacement/: CMakeLists.txt  LaplacianBlending.cpp  LaplacianBlending.h  OGL_OCV_common.cpp  OGL_OCV_common.h  SpharmonicsUI.cpp  SpharmonicsUI.h  align_image_model.cpp  align_image_model.h  fshader.txt  glm.cpp  glm.h  main.cpp  spherical_harmonics_analysis.cpp  spherical_harmonics_analysis.h  vshader.txt
HeadReplacement/reshaping/: 1-Normal.model_info.txt  2-Normal.model_info.txt  3-Normal.model_info.txt  4-Normal.model_info.txt  5-Normal.model_info.txt  6-Normal.model_info.txt
HeadReplacement/reshaping1/: 1-Normal.model_info.txt  2-Normal.model_info.txt  3-Normal.model_info.txt  4-Normal.model_info.txt
VirtualSurgeon/: CMakeLists.txt  README
VirtualSurgeon/VirtualSurgeon_HeadExtractor/: CMakeLists.txt  CurveWindow.cpp  CurveWindow.h  GUICommon.h  LandmarksWindow.cpp  LandmarksWindow.h  MainWindow.cpp  MainWindow.h  SegmentationWindow.cpp  SegmentationWindow.h  StdAfx.h  graphcut.cpp  head_extractor.cpp  head_extractor.h  head_extractor_main.cpp
VirtualSurgeon/VirtualSurgeon_Recoloring/: CMakeLists.txt  Recoloring.cpp  Recoloring.h
VirtualSurgeon/VirtualSurgeon_Utils/: CMakeLists.txt  ImageEditingUtils.cpp  ImageEditingUtils.h  OpenCV2ImageWrapper.cpp  OpenCV2ImageWrapper.h  VirtualSurgeon_Utils.cpp  VirtualSurgeon_Utils.h  VirtualSurgeon_Utils.vcproj  VirtualSurgeon_Utils.vcxproj  VirtualSurgeon_Utils.vcxproj.filters  curl_get.cpp  neck_curve_points.h  stdafx.h
VirtualSurgeon/libjson/: CMakeLists.txt  JSONOptions.h
VirtualSurgeon/libjson/Source/: JSONChildren.h  JSONDefs.h  JSONMemory.h  NumberToString.h  libjson.cpp
VirtualSurgeon/matting/matting/: CMakeLists.txt  gui.cpp  gui.h  matting.cpp  matting.h  matting.vcproj  matting.vcproj.8.00.old  matting.vcxproj  matting.vcxproj.filters  solver.cpp  solver.h
